client/src/App.css
/* ... */
[data-hamOpenOrClosed="closed"] {
  --navSearchDisplay: none;
  --hamburgerIconFontSize: 1rem;
  --hamburgerListDisplay: none;
  --logoDisplay: flex;
  /* --logoDisplayMobile: none; */
}

[data-navTheme="transparent"] {
  --navBGColor: none;
  --navLogoColor: #fff;
  --navArrowIconColor: #fff;
  --navArrowIconColorHover: rgb(209, 209, 209);
  --hamburgerIconColor: #fff;
  --navbarHeightMargin: 0px;
  --navPosition: absolute;
  --navRight: 0;
  --navLeft: 0;
  --navMargin: 0 auto;
}

[data-navTheme="white"] {
  --navBGColor: white;
  --navLogoColor: var(--dark2);
  --navLogoColorMobile: #fff;
  --navLogoBGColor: #dcad00;
  --navArrowIconColor: #a0a0a0;
  --navArrowIconColorHover: rgb(116, 116, 116);
  --navSearchDisplay: flex;
  --hamburgerIconColor: #4a4a4a;
  --navOutline: solid 1px #f0f0f0;
  --navbarHeightMargin: 80px;
}

[data-navTheme="black"] {
  --navBGColor: #4a4a4a;
  --navLogoColor: #fff;
  --navLogoColorMobile: #fff;
  --navLogoBGColor: #dcad00;

  --navArrowIconColor: white;
  --navArrowIconColorHover: rgb(209, 209, 209);
  --navSearchDisplay: flex;
  --hamburgerIconColor: white;
  --navbarHeightMargin: 80px;
}

[data-hamOpenOrClosed="open"] {
  --navBGColor: #000000;
  --navLogoColor: white;
  --navSearchDisplay: flex;
  --hamburgerIconFontSize: 1.41rem;
  --hamburgerListDisplay: block;
  --navOutline: none;
  --logoDisplay: none;
  --logoDisplayMobile: flex;
  --navLogoColorMobile: #fff;
  --navLogoBGColor: #dcad00;
}

.app {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}
@media (width<900px) {
  .app {
    min-height: 100%;
  }
}

a {
  text-decoration: none;
}

.overflowYHidden {
  overflow: hidden;
}

.blue {
  color: blue;
}

ul,
li {
  list-style-type: none;
  list-style-position: none;
  margin: 0;
  padding: 0;
}

button {
  border: none;
  background: none;
}

.opacity0 {
  opacity: 0;
}

.gone {
  display: none;
}

.displayNone {
  display: none;
}

.pointer-events__none {
  pointer-events: none;
}

/* Gallery Heading CSS */
.galleryHeadingAndSortContainer {
  margin-top: 3rem;
  margin-bottom: 5rem;
}
.galleryHeading {
  font-size: 2rem;
  text-align: center;
  margin: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 1.25rem;
}
.galleryHeading h2 {
  font-size: 3.125rem;
}
.galleryHeading p {
  font-size: 1rem;
  margin-top: -1.6rem;
  color: rgb(118, 118, 118);
}

/* Progress Bar CSS */

.progress-bar__main {
  width: 0px;
  height: 4px;
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgb(103, 187, 103);
  z-index: 100000;
}
.progress-bar__start {
  animation: progressBar-start;
  animation-duration: 1s;
  animation-timing-function: ease-in;
}

.progress-bar__pause {
  animation-play-state: paused;
}
.progress-bar__finish {
  animation: progressBar-finish;
  animation-duration: 0.3s;
  animation-timing-function: ease-in-out;
}

@keyframes progressBar-start {
  from {
    width: 0px;
  }
  to {
    width: 100%;
  }
}

@keyframes progressBar-finish {
  from {
    width: 9%;
  }
  to {
    width: 100%;
  }
}

/* NavBar CSS */
.navbar__height-margin {
  height: var(--navbarHeightMargin);
}
.navbar__container {
  background-color: var(--navBGColor);
  display: flex;
  height: 80px;
  justify-content: center;
  outline: var(--navOutline);
  transition: background-color 0.5s;
  z-index: 99999999999999999999999999;
  position: var(--navPosition);
  left: var(--navLeft);
  right: var(--navRight);
  margin: var(--navMargin);
}
.navbar__contents {
  padding: 0 var(--sideSpacePadding);
  width: 100vw;
  max-width: var(--siteContentsMaxWidth);
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 39px;
}
.navbar__logo {
  margin: 0;
  z-index: 1;
  margin-bottom: 1.5px;
  line-height: 1.2;
  display: var(--logoDisplay);
  align-items: center;
  text-decoration: none;
  font-size: 1.5rem;
  font-weight: 500;
  color: var(--navLogoColor);
  transition: color 0.15s ease-in-out;
}
.navbar__logo__mobile {
  display: none;
  margin: 0;
  z-index: 1;
  margin-bottom: 1.5px;
  line-height: 1.2;
  display: flex;
  align-items: center;
  text-decoration: none;
  font-size: 1.95rem;
  font-weight: 500;
  color: var(--navLogoColorMobile);
  background-color: var(--navLogoBGColor);
  padding: 0.25rem 1rem;
  height: 45px;
  border-radius: 6px;
  transition: color 0.15s ease-in-out;
}
.navbar__logo__mobile:hover {
  color: #e6e6e6;
  background-color: #b78f00;
}
[data-navTheme="transparent"] .navbar__logo:hover {
  color: rgb(207, 207, 207);
}
[data-navTheme="white"] .navbar__logo:hover {
  color: rgb(46, 46, 46);
}
[data-navTheme="black"] .navbar__logo:hover {
  color: rgb(207, 207, 207);
}
.navbar__search-container {
  width: 100%;
  display: var(--navSearchDisplay);
  justify-content: center;
  align-items: center;
  z-index: 1;
}
.navbar__search-bar {
  border: none;
  border-top-left-radius: 9px;
  border-bottom-left-radius: 9px;
  border-top-right-radius: 0px;
  border-top-left-radius: 0px;
  /* max-width: 38rem; */
  width: 100%;
  font-size: 1.15rem;
  font-weight: 500;
  padding: 0.5rem 1.25rem;
  padding-right: 30px;
  outline: none;
  color: #747474;
  background-color: #f7f7f7;
  height: 50px;
  animation: fadeIn 0.6s;
}
.navbar__search-button {
  background-color: #f7f7f7;
  height: 50px;
  width: 50px;

  border-top-right-radius: 9px;
  border-bottom-right-radius: 9px;
  padding: 1rem;
  position: relative;
  animation: fadeIn 0.6s;
}
.navbar__search-icon {
  color: #747474;
  font-size: 1.1rem;
  transition: 0.05s ease;
  position: absolute;
  top: 30%;
  left: 25%;
}
.navbar__buttons-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2.1rem;
  font-size: 1rem;
}
.navbar__login-button {
  color: white;
  font-size: 1rem;
  font-weight: 500;
  text-decoration: none;
  transition: 0.2s;
  width: 50px;
  z-index: 1;
}
.navbar__login-button:hover {
  color: rgb(232, 232, 232);
}
/* ... */

